# ipb_car_monitor

./: .gitlab-ci.yml  CMakeLists.txt  package.xml  setup.cfg  setup.py
config/: topics_to_monitor.yaml
ipb_car_monitor/: cameras_consistency.py  monitor.py  sensor_status.py  view.py
ipb_car_monitor/controller/: controller.py
ipb_car_monitor/model/: cameras_consistency.py  model.py  sensor_status.py
ipb_car_monitor/view/: view.py
